--- a/classificacao_estorno_rfc.ipynb
+++ b/classificacao_estorno_rfc.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpMPxx1uFhlkYOTsd9a3uX",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPenwxwY4teckP5j+lZ5Csp"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,86 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/rafaelpivetta/machine-learning/blob/main/classificacao_estorno_rfc.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install skl2onnx"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 708
-        },
-        "id": "yRZtia1A6wVs",
-        "outputId": "96e1f1b8-b8b8-4aa2-9e41-cc9e9f8d9c4a"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting skl2onnx\n",
-            "  Downloading skl2onnx-1.18.0-py2.py3-none-any.whl.metadata (3.2 kB)\n",
-            "Collecting onnx>=1.2.1 (from skl2onnx)\n",
-            "  Downloading onnx-1.17.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (16 kB)\n",
-            "Requirement already satisfied: scikit-learn>=1.1 in /usr/local/lib/python3.11/dist-packages (from skl2onnx) (1.6.1)\n",
-            "Collecting onnxconverter-common>=1.7.0 (from skl2onnx)\n",
-            "  Downloading onnxconverter_common-1.14.0-py2.py3-none-any.whl.metadata (4.2 kB)\n",
-            "Requirement already satisfied: numpy>=1.20 in /usr/local/lib/python3.11/dist-packages (from onnx>=1.2.1->skl2onnx) (1.26.4)\n",
-            "Requirement already satisfied: protobuf>=3.20.2 in /usr/local/lib/python3.11/dist-packages (from onnx>=1.2.1->skl2onnx) (4.25.6)\n",
-            "Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from onnxconverter-common>=1.7.0->skl2onnx) (24.2)\n",
-            "Collecting protobuf>=3.20.2 (from onnx>=1.2.1->skl2onnx)\n",
-            "  Downloading protobuf-3.20.2-py2.py3-none-any.whl.metadata (720 bytes)\n",
-            "Requirement already satisfied: scipy>=1.6.0 in /usr/local/lib/python3.11/dist-packages (from scikit-learn>=1.1->skl2onnx) (1.14.1)\n",
-            "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.11/dist-packages (from scikit-learn>=1.1->skl2onnx) (1.4.2)\n",
-            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.11/dist-packages (from scikit-learn>=1.1->skl2onnx) (3.5.0)\n",
-            "Downloading skl2onnx-1.18.0-py2.py3-none-any.whl (300 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m300.3/300.3 kB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading onnx-1.17.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.0 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.0/16.0 MB\u001b[0m \u001b[31m20.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading onnxconverter_common-1.14.0-py2.py3-none-any.whl (84 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m84.5/84.5 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading protobuf-3.20.2-py2.py3-none-any.whl (162 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m162.1/162.1 kB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: protobuf, onnx, onnxconverter-common, skl2onnx\n",
-            "  Attempting uninstall: protobuf\n",
-            "    Found existing installation: protobuf 4.25.6\n",
-            "    Uninstalling protobuf-4.25.6:\n",
-            "      Successfully uninstalled protobuf-4.25.6\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "tensorflow-metadata 1.16.1 requires protobuf<6.0.0dev,>=4.25.2; python_version >= \"3.11\", but you have protobuf 3.20.2 which is incompatible.\n",
-            "tensorflow 2.18.0 requires protobuf!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5,<6.0.0dev,>=3.20.3, but you have protobuf 3.20.2 which is incompatible.\n",
-            "grpcio-status 1.62.3 requires protobuf>=4.21.6, but you have protobuf 3.20.2 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed onnx-1.17.0 onnxconverter-common-1.14.0 protobuf-3.20.2 skl2onnx-1.18.0\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "google"
-                ]
-              },
-              "id": "f6f75cd3e3ea43878e9c0e59abf9f5c3"
-            }
-          },
-          "metadata": {}
-        }
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -1088,53 +1007,6 @@
             "Predições (0 = Não fraude, 1 = Fraude): [1]\n",
             "Probabilidades fraude: [0.77]\n",
             "Probabilidades não fraude: [0.23]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Para converter o modelo em ONNX\n",
-        "import skl2onnx\n",
-        "from skl2onnx import convert_sklearn\n",
-        "from skl2onnx.common.data_types import FloatTensorType\n",
-        "\n",
-        "# 6. Conversão para ONNX (usando o melhor estimador do GridSearch)\n",
-        "best_model = grid_search.best_estimator_\n",
-        "\n",
-        "# Definindo o formato de entrada: (None, número de features)\n",
-        "# initial_type = [('input', FloatTensorType([None, len(features)]))]\n",
-        "# 'loja', 'valor', 'dif_minutos', 'hora_fim_expediente_minutos', 'hora_estorno_minutos'\n",
-        "initial_type = [\n",
-        "    ('loja', FloatTensorType([None, 1])),\n",
-        "    ('valor', FloatTensorType([None, 1])),\n",
-        "    ('dif_minutos', FloatTensorType([None, 1])),\n",
-        "    ('hora_fim_expediente_minutos', FloatTensorType([None, 1])),\n",
-        "    ('hora_estorno_minutos', FloatTensorType([None, 1]))\n",
-        "]\n",
-        "\n",
-        "onnx_model = convert_sklearn(best_model, initial_types=initial_type)\n",
-        "\n",
-        "with open(\"predicao_estorno_model.onnx\", \"wb\") as f:\n",
-        "    f.write(onnx_model.SerializeToString())\n",
-        "\n",
-        "print(\"Modelo ONNX salvo em 'predicao_estorno_model.onnx'\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EKLqca4n6QU7",
-        "outputId": "be97d999-119c-400a-ac08-ca90e859e67f"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Modelo ONNX salvo em 'predicao_estorno_model.onnx'\n"
           ]
         }
       ]
